[workspace]
resolver = "2"
members = [
    "admin",
    "cargo-audit",
    "cargo-lock",
    "cvss",
    "platforms",
    "quitters",
    "rustsec"
]

[patch.crates-io]
cargo-lock = { path = "./cargo-lock" }
cvss = { path = "./cvss" }
platforms = { path = "./platforms" }
quitters = { path = "./quitters" }
rustsec = { path = "./rustsec" }

tame-index = { git = 'https://github.com/dsteeley/tame-index.git', branch = "no_rustls_dep" }
# tame-index = { path = '/home/dws/qs/third-party/tame-index' }
